# gbemu

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: deploy-web.yaml
core/: Cargo.toml
core/src/: apu.rs  clock.rs  cpu.rs  debug.rs  gbemu.rs  instructions.rs  joypad.rs  lcd.rs  lib.rs  mbc.rs  mmu.rs  ppu.rs  registers.rs  shaders.rs  spu.rs  utils.rs
desktop/: Cargo.toml
desktop/src/: main.rs
pkg/: package.json  web.d.ts  web.js  web_bg.wasm  web_bg.wasm.d.ts
terminal/: Cargo.toml
terminal/src/: main.rs
web/: Cargo.toml  index.html
web/src/: lib.rs
