[package]
name = "web"
version = "0.1.0"
edition = "2021"
authors = ["materight"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
gb-core = { path = "../core" }

js-sys = "0.3.68"
base64 = "0.21.7"
wasm-bindgen = "0.2.91"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.68", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "Window", "console", "KeyboardEvent", "Storage"] }
